[package]
name = "idl-guesser"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
solana-sbpf = { git = "https://github.com/leoQ7/sbpf", branch = "main" }

[dependencies]
solana-sbpf = { git = "https://github.com/leoQ7/sbpf", branch = "main" }
solana-bpf-loader-program = "2.2.1"
solana-program-runtime = "2.2.1"
solana-sdk = "2.2.1"
solana-compute-budget = "2.2.1"
solana-type-overrides = "2.2.1"
solana-feature-set = "2.2.1"
solana-log-collector = "2.2.1"
solana-client = "2.2.1"
solana-rent = "2.2.1"
rustc-demangle = "0.1"
heck = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anchor-client = "0.31.0"
anchor-lang = "0.31.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
log = "0.4"
env_logger = "0.11"
bytemuck = "1.22"